--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,15 +4,18 @@ project:
 
 render:
       - index.qmd
-      - intro.qmd
+      - ACP-Cours.qmd
+      - CAH-Cours.qmd
+
 
 website:
-  title: "ACP-CAH"
+  title: "EXP3 : Stat. Multivariée"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - intro.qmd
+      - ACP-Cours.qmd
+      - CAH-Cours.qmd
 
 format:
   html:
