--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ project:
 render:
       - index.qmd
       - Cours-AFC.qmd
+      - Cours-ACM.qmd      
       - Cours-ACP.qmd
       - Cours-CAH.qmd
       - Exo-CEDEAO.qmd
@@ -17,6 +18,7 @@ website:
       - href: index.qmd
         text: Home
       - Cours-AFC.qmd
+      - Cours-ACM.qmd       
       - Cours-ACP.qmd
       - Cours-CAH.qmd
       - Exo-CEDEAO.qmd
